--- a/programming/database.html
+++ b/programming/database.html
@@ -176,7 +176,7 @@ insertStudent('Петр', 'petr', 'MT-204')
 
 <div><h2>Firebase</h2>
 	<a href="https://firebase.google.com/"><img src="https://www.gstatic.com/devrel-devsite/prod/v35095b53655653106712feb44f96c6929ce012ae38486ad7db1de265cbd9b7ec/firebase/images/favicon.png" alt="firebase"> firebase.google.com</a><br>
-	<a href="https://youtu.be/O2_J45MN8kg">Firebase September by GDG Russia. Day 1 (2020)</a><br>
+	<a href="https://www.youtube.com/playlist?list=PLGlZ_ld11os-uaWVHTp6K-ZAzk4xdkOVM">Firebase September by GDG Russia (2020)</a><br>
 	Google Cloud Platform (GCP)
 	<pre><code>
 sudo npm install -g firebase-tools
