--- a/programming/nodejs.html
+++ b/programming/nodejs.html
@@ -154,6 +154,11 @@ zlib.gzip(buffer, function(err, buffer) {
 	fs.writeFile(filename + '.gz', buffer, )
 });
 </code></pre></details>
+<details>
+<summary>chalk</summary><pre><code>
+const chalk = require('chalk')
+console.log(chalk.blue('Hello'))
+</code></pre></details>
 </div>
 
 <div>сторонние модули:
