--- a/programming/programming.html
+++ b/programming/programming.html
@@ -30,6 +30,7 @@
 
 <div id="links">
     <a href="https://stepik.org/catalog?language=ru"><img src="https://stepik.org/static/classic/ico/favicon_32.png" alt="stepik"></a>
+    <a href="https://www.udemy.com/"><img src="https://www.udemy.com/staticx/udemy/images/v6/favicon-32x32.png" alt="udemy"></a>
     <a href="https://loftblog.ru/"><img src="https://loftblog.ru/favicon/apple-touch-icon.png" alt="loftblog"></a>
     <a href="https://www.w3schools.com/">W3C</a>
     <a href="https://www.codewars.com/"><img src="https://www.codewars.com/favicon.ico" alt="codewars"></a>
@@ -104,6 +105,7 @@
 </div>
 
 <div><h2>AI / Data Science</h2>
+    <a href="https://habr.com/ru/post/312450/">Нейронные сети для начинающих</a><br>
     ELIZA <br>
     IBM Watson <br>
     <a href="https://youtu.be/BX2M8t5BA3s">Machine Learning &<br>
@@ -114,6 +116,21 @@
     <a href="https://arcopypaste.app/">arcopypaste.app</a><br>
     <a href="https://github.com/alievk/avatarify">avatarify</a><br>
     <a href="https://youtu.be/BVIJgLLXnx8">Вебинар от Валерия Бабушкина для участников Школы 21: Data Science</a><br>
+    <ul><a href="https://proglib.io/p/kak-nauchitsya-data-science-onlayn-12-shagov-ot-novichka-do-profi-2020-06-30?utm_source=emarsys&utm_medium=email&utm_campaign=emarsys_email_digest_act_040820_final&utm_term=2127051&utm_content=digestp&sc_src=email_2127051&sc_lid=147595358&sc_uid=zyQbdIEm8o&sc_llid=107498&sc_customer=3966179"></a>
+        <li>JupyterLab и Jupyter Notebook</li>
+    </ul>
+    сеть прямого распространения (СПР) <br>
+</div>
+
+<div class="img32">
+    <h3>Функциональное<br>программирование</h3>
+    <a href="https://idris-lang.org/"><img src="https://idris-lang.org/logo/logo-small.png" alt="idris-logo"> </a>
+    <a href="https://github.com/edwinb/Idris2">Idris2</a>
+    <a href="https://youtu.be/mOtKD7ml0NU" title="youtube">.</a>
+    <a href="https://youtu.be/o-7zhrUP3ds" title="youtube2">.</a><br>
+    <a href="https://www.haskell.org/"><img src="https://www.haskell.org/img/favicon.ico" alt="Haskell"> Haskell</a><br>
+    Курт Уилл - Программируй на Haskell <br>
+    Окасаки К. - Чисто функциональные структуры данных <br>
 </div>
 
 <div><h2>Реактивное программирование</h2>
@@ -317,17 +334,6 @@ ack // умный поиск
     <a href="https://habr.com/ru/post/430918/">Про Flutter, кратко: Основы / Хабр</a><br>
     <a href="https://docs.google.com/presentation/d/1qUycUmwT1bk0dFY-kqvGk-tuGtQMj2g_HchUrWXrk3w/mobilepresent?slide=id.p">Как я изучал Flutter @gorniv</a><br>
     <a href="https://youtu.be/qYzydKidbDQ">Flutter Day Russia</a><br>
-</div>
-
-<div class="img32">
-    <h3>Функциональное<br>программирование</h3>
-    <a href="https://idris-lang.org/"><img src="https://idris-lang.org/logo/logo-small.png" alt="idris-logo"> </a>
-    <a href="https://github.com/edwinb/Idris2">Idris2</a>
-    <a href="https://youtu.be/mOtKD7ml0NU" title="youtube">.</a>
-    <a href="https://youtu.be/o-7zhrUP3ds" title="youtube2">.</a><br>
-    <a href="https://www.haskell.org/"><img src="https://www.haskell.org/img/favicon.ico" alt="Haskell"> Haskell</a><br>
-    Курт Уилл - Программируй на Haskell <br>
-    Окасаки К. - Чисто функциональные структуры данных <br>
 </div>
 
 <div class="img32">
