--- a/programming/python.html
+++ b/programming/python.html
@@ -21,11 +21,24 @@
     <li><a href="https://2.python-requests.org/en/master/">requests</a></li>
     <li><a href="https://twistedmatrix.com/trac/">twisted</a></li>
   </ul>
+  <a href="https://pythontutor.ru">pythontutor.ru</a><br>
+  <a href="https://pythonworld.ru/osnovy/pep-8-rukovodstvo-po-napisaniyu-koda-na-python.html">pep-8</a><br>
   𝟭: Книги: <a href="https://vk.com/topic-84392011_37640354">https://vk.com/topic-84392011_37640354</a><br>
   𝟮: Проект Эйлера: <a href="http://euler.jakumo.org/">http://euler.jakumo.org/</a><br>
   𝟯: Awesome Python: <a href="https://github.com/vinta/awesome-python">https://github.com/vinta/awesome-python</a><br>
   𝟰: Курс по написанию ботов для Telegram: <a href="https://groosha.gitbooks.io/telegram-bot-lessons/content/">https://groosha.gitbooks.io/telegram-...</a><br>
   <a href="https://github.com/manchenkoff/skillbox-chat">skillbox-chat</a><br>
+</div>
+
+<div>
+    <h3>Telegram Bot</h3>
+    <code>
+        <pre>
+pip install pyTelegramBotApi # <a href="https://core.telegram.org/bots/api">core.telegram.org</a>
+pip3 install pyrogram # <a href="https://docs.pyrogram.org/">docs.pyrogram.org</a>
+<a href="https://github.com/ColinTheShark/Pyrogram-Snippets/tree/master/Snippets#snippets">Продвинутые примеры</a>
+        </pre>
+    </code>
 </div>
 
 <article>
@@ -35,7 +48,9 @@ python main.py
 pip
 pip install -U pip
 pip freeze > requirements.txt
-pip install pyTelegramBotApi
+pip install numpy
+python3 -m pip install -U pygame==2.0.0.dev12 --user
+python3 -m pip install neat-python --user
 
 </code></pre>
      
@@ -43,7 +58,7 @@ pip install pyTelegramBotApi
 a = 1 + 1 # integer
 b = 1.0 + 1.0 # float
 c = 5**2 # 25
-d = 20//6 # 3 часное
+d = 20//6 # 3 целочисленное деление
 string = "John" # string
 string = "John" * 2 # JohnJohn
 string = "John" + 2 # error
