--- a/programming/safety.html
+++ b/programming/safety.html
@@ -12,6 +12,7 @@
 </div>
 
 <div>
+	<a href="https://snyk.io/vuln/">snyk.io</a><br>
 	<a href="https://habr.com/ru/company/pt/blog/264599/">Человек — это главная уязвимость. Немного о социальной инженерии на PHDays V</a><br>
 	для регистраций отдельная почта test+random@gmail.com??<br>
 	<a href="https://html5sec.org">html5sec.org</a><br>
