--- a/flamenco/index.html
+++ b/flamenco/index.html
@@ -47,8 +47,8 @@
   <div id="headerBar">
     <div><a href="../flamenco/" title="flamenco"><img src="../icons/flamenco.png" alt="flamenco"></a></div>
 
-    <div><a class="item">Стили Фламенко</a>
-      <div>
+<!--     <div><a class="item">Стили Фламенко</a>
+      <div> -->
 <div><a href="#alegrias">Alegrias</a></div>
 <div><a href="#bulerias">Bulerias</a></div>
 <div><a href="#granaina">Granaina</a></div>
@@ -59,8 +59,8 @@
 <div><a href="#tangos">Tangos</a></div>
 <div><a href="#tarantas">Tarantas</a></div>
 <div><a href="#tientos">Tientos</a></div>
-      </div>
-    </div>
+<!--       </div>
+    </div> -->
   </div>
 </header>
 
