--- a/programming/algorithms.html
+++ b/programming/algorithms.html
@@ -2,15 +2,16 @@
 <div id="pageLogo"><a href="#algorithms">Алгоритмы</a></div>
 
 <div>
-    <a href="https://docs.google.com/presentation/d/10-1h9GR7D2VmVzzg17oBug_VvHEsPtXUiKDktHW2lDw/edit?usp=sharing">Алгоритмы. Лена Волжина</a><br>
-    <a href="https://stepik.org/217">stepik.Алгоритмы</a><br>
-    <a href="https://stepik.org/1547">stepik.Структуры данных</a><br>
-    <a href="https://leetcode.com/problemset/all/?difficulty=Easy">leetcode.Больше практики</a><br>
-    <a href="https://alexanderskulikov.github.io/files/algorithms_href.pdf">algorithms_href.pdf</a><br>
-    <a href="http://bigocheatsheet.com">Шпаргалка по O-нотации</a><br>
-    <a href="https://youtu.be/MWsfHQaUzI0">Алгоритмы и структуры данных (С++), лекция №1</a><br>
-    <a href="https://habr.com/p/497476/">Структуры данных на примере JavaScript</a><br>
-    <a href="https://youtu.be/KdZ4HF1SrFs">Алгоритмы на Python 3. Лекция №1</a><br>
+  <a href="http://euler.jakumo.org/">euler.jakumo</a><br>
+  <a href="https://docs.google.com/presentation/d/10-1h9GR7D2VmVzzg17oBug_VvHEsPtXUiKDktHW2lDw/edit?usp=sharing">Алгоритмы. Лена Волжина</a><br>
+  <a href="https://stepik.org/217">stepik.Алгоритмы</a><br>
+  <a href="https://stepik.org/1547">stepik.Структуры данных</a><br>
+  <a href="https://leetcode.com/problemset/all/?difficulty=Easy">leetcode.Больше практики</a><br>
+  <a href="https://alexanderskulikov.github.io/files/algorithms_href.pdf">algorithms_href.pdf</a><br>
+  <a href="http://bigocheatsheet.com">Шпаргалка по O-нотации</a><br>
+  <a href="https://youtu.be/MWsfHQaUzI0">Алгоритмы и структуры данных (С++), лекция №1</a><br>
+  <a href="https://habr.com/p/497476/">Структуры данных на примере JavaScript</a><br>
+  <a href="https://youtu.be/KdZ4HF1SrFs">Алгоритмы на Python 3. Лекция №1</a><br>
 
 </div>
 <div>
