--- a/13century/warband.html
+++ b/13century/warband.html
@@ -55,6 +55,12 @@
             merchant_kingdom_42 (1)<br>
         </div>
     </details>
+    <details>
+        <summary>module_game_menus.py</summary>
+        <div>
+            g_start_faction<br>
+        </div>
+    </details>
 </div>
 <div>
     <h3>p_town_22_1</h3>
