--- a/linguistics/index.html
+++ b/linguistics/index.html
@@ -23,9 +23,13 @@
     </div>
 </header>
 
-<main class="flex">
+<main class="flex import_Data">
 
-    <nav></nav>
+    <div>
+        <h3>Грузинский</h3>
+        <a href="../linguistics/gruzin.jpg" data-lightbox="1" data-title=""><img src="../linguistics/gruzin-200.jpg"></a>
+        <a href="../linguistics/gruzin2.png" data-lightbox="1" data-title=""><img src="../linguistics/gruzin2-200.png"></a>
+    </div>
 
     <div id="links">
         <a href="https://www.youtube.com/playlist?list=PLJE3p5f_2oQ5HO-5s8GkPLOwEOUccCFxC">Арабский алфавит (Po-ArabskiRU)</a><br>
