--- a/programming/webpack.html
+++ b/programming/webpack.html
@@ -1,9 +1,9 @@
 <div id="pageTitle"></div>
 <div id="pageLogo"><a href="#webpack">
-    <img src="https://webpack.js.org/e0b5805d423a4ec9473ee315250968b2.svg" alt="webpack"></a></div>
+    <img src="../icons/webpack.svg" alt="webpack"></a></div>
 
 <div id="links">
-  <a href="https://webpack.js.org"><img src="https://webpack.js.org/e0b5805d423a4ec9473ee315250968b2.svg" alt=""></a><br>
+  <a href="https://webpack.js.org"><img src="../icons/webpack.svg" alt=""></a><br>
   <a href="https://www.youtube.com/watch?v=eSaF8NXeNsA">webpack. Владилен Минин.2020</a><br>
   <a href="https://www.youtube.com/watch?v=Tg8IVbvturM">Антон Кастрицкий</a><br>
   <a href="https://youtu.be/aiYkJOPD9v8">Стас Курилов — Глубокое погружение в webpack (2018)</a><br>
