--- a/sailing/literM.html
+++ b/sailing/literM.html
@@ -2,10 +2,11 @@
 
 <div class="import_Data flex">
 
-<div><a href="../sailing/books/l-petersson_takelazh_modelej_istoricheskikh_korabl.pdf">Такелаж моделей исторических кораблей . Л. Петерссон. </a> 32Mb</div>
+<div><a href="../sailing/books/l-petersson_takelazh_modelej_istoricheskikh_korabl.pdf">Такелаж моделей исторических кораблей . Л. Петерссон. 2013</a> 32Mb</div>
 <div><a title="">Historic sail the glory of the sailing ship from the 13th to the 19h century </a></div>
 <div><a href="https://yadi.sk/i/6LgIQ3JV3Ssvdn">Чайные клипера . Кэмпбэлл . 2011</a> 168Mb</div>
 <div><a href="https://cloud.mail.ru/public/BnHk/YntkwiBBh">17th and 18th Century Ship Models from the Kriegstein Collection . 2007</a> 549Mb</div>
+<div><a href="https://yadi.sk/i/S57DcVy-vD5RVA">LA BELLE: RIGGING IN THE DAYS OF THE SPRITSAIL TOPMAST, A RECONSTRUCTION OF A SEVENTEENTH-CENTURY SHIP’S RIG . 2007</a> 42Mb</div>
 <div><a href="../sailing/books/ferreiro_l_d_ships_and_science_the_birth_of_naval_.pdf">Ships and Science: The Birth of Naval Architecture in the Scientific Revolution, 1600-1800 . Ferreiro L.D. 2007 </a> 6Mb</div>
 <div><a href="https://yadi.sk/i/yfgTyYc63Sswt6">Русские императорские яхты . Знаменов В.В. 1997</a> 192Mb</div>
 <div><a href="https://yadi.sk/i/Y19GiFzR3SsxDU">Historic Ship Models . Mondfeld . 1989</a> 271Mb</div>
@@ -17,6 +18,7 @@
 <div><a href="https://yadi.sk/i/0Jl5Y85C3NMWyW">Постройка яхт . К. Рейнке. Л. Лютьен. И. Мус. 1986 </a>. 51Mb</div>
 <div><a href="../sailing/books/Leontyev_capitan.pdf">Школа Яхтеннго Капитана . Леонтьев . 1983 </a> 5.5Mb</div>
 <div><a href="../sailing/books/Proktor.pdf">Ветер, волнение и течения . Проктор . 1981 </a> 4Mb</div>
+<div><a href="https://yadi.sk/i/JIl19ExcS5CZ7g">Blackburn G. Ships, Boats, Vessels, and Other Water-Borne Craft.pdf . 1978</a>43Mb</div>
 <div><a href="../sailing/Leontyev_E_P_Shkola_yakhtennogo_rulevogo_1974.pdf">Школа Яхтеннго Рулевого . Леонтьев . 1974 </a> 5.5Mb</div>
 <div><a href="../sailing/books/Karlov.pdf">Учебник Судоводителя Любителя . Карлов . 1972 </a> 14Mb</div>
 <div><a href="../sailing/books/Elvstrem.pdf">Искусство Плавания под Парусами . Эльвстрем . 1971 </a> 10Mb</div>
