--- a/sailing/literO.html
+++ b/sailing/literO.html
@@ -16,6 +16,7 @@
 <div><a href="../sailing/books/sarychev_i-objasnenie_k_atlasu_chertezhej_morskoj_.pdf">Объяснение к атласу чертежей морской практики . Сарычев И. 1889</a> 28Mb</div>
 <div><a href="https://archive.org/details/yachtsyachting00cozz_0">Yachts and yachting . Cozzens . 1887 </a> . <a href="https://yadi.sk/i/5svMN5lo3NMM9g"> pdf </a> 77Mb</div>
 <div><a href="https://archive.org/details/amateuryachting00adam">Amateur yachting . Adams . 1886 </a></div>
+<div><a href="https://yadi.sk/d/ikP9hJt1e4mfKw">Anderson R.C. The Rigging of Ships 1600-1720 . 1883</a> 222Mb</div>
 <div><a href="../sailing/books/bogoljubov_n.p-istorija_korablja-t-2.pdf">Исторiа корабля. том 2. Боголюбов . 1880</a> 27Mb</div>
 <div><a href="../sailing/books/bogoljubov_n.p-istorija_korablja-t-1.pdf">Исторiа корабля. том 1. Боголюбов . 1879</a> 29Mb</div>
 <div>Dixon Kemp's Yacht Architecture (London, 1876)</div>
