--- a/sailing/sailboats/grunvald.html
+++ b/sailing/sailboats/grunvald.html
@@ -30,48 +30,60 @@
 </tr>
 </table>
 
-<table style="font-size:1.0em" border="0" cellpadding="5" cellspacing="0" width="100%">
-<tr>
- <td width=250><br><br><br><br></td>
- <td></td>
-</tr>
-
-<tr>
- <td>проект "Clipper"<br>
-LWL:212'/64,7m .Beam:36'/11m .Draft:21'/6,4m<br>
-20*3.4*2<br>
-15*2.55*1.5<br>
-10*1.7*1<br></td>
- <td><a href="../sailing/sailboats/Clipper/thermopylae/2.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/Clipper/thermopylae/2-200.jpg"></a>
-<a href="../sailing/sailboats/Clipper/leander/2.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/Clipper/leander/2-200.jpg"></a></td>
-</tr>
-
-<tr>
- <td>43_02_b . Шхуна<br> длина - 21.90 м, ширина - 5.64 м, осадка - 2.08 м</td>
- <td><a href="../sailing/sailboats/HisSmallShip/43_02_b.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/HisSmallShip/43_02_b-200.jpg" height=200></a></td>
-</tr>
-
-<tr>
- <td>44_04_b . Шхуна<br> длина - 19.00 м, ширина - 5.05 м, осадка - 1.78 м</td>
- <td><a href="../sailing/sailboats/HisSmallShip/44_04_b.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/HisSmallShip/44_04_b-200.jpg" height=200></a></td>
-</tr>
-
-<tr>
- <td>44_03_b<br> длина - 16.03 м, ширина - 5.22 м, осадка - 1.93 м</td>
- <td><a href="../sailing/sailboats/HisSmallShip/44_03_b.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/HisSmallShip/44_03_b-200.jpg" height=200></a></td>
-</tr>
-
-<tr>
- <td>43_01_b<br>длина - 23.01 м, ширина - 6.83 м, осадка - 2.52 м </td>
- <td><a href="../sailing/sailboats/HisSmallShip/43_01_b.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/HisSmallShip/43_01_b-200.jpg"></a></td>
-</tr>
-</table>
+<div>
+    <div class="boatInfo">
+        проект "Clipper"
+        <br>LWL:212'/64,7m .Beam:36'/11m .Draft:21'/6,4m
+        <br>20*3.4*2
+        <br>15*2.55*1.5
+        <br>10*1.7*1
+        <br>
+    </div>
+    <a href="../sailing/sailboats/Clipper/thermopylae/2.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/Clipper/thermopylae/2-200.jpg"></a>
+    <a href="../sailing/sailboats/Clipper/leander/2.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/Clipper/leander/2-200.jpg"></a>
+</div>
 
 <div>
-	<img src="../sailing/sailboats/grunvald/the-house-of-seven-rivers-2.jpg">
-	<img src="../sailing/sailboats/grunvald/3387244810_e5ec909f5b.jpg">
-	<img src="../sailing/sailboats/grunvald/Sail_Yacht_ELEFTHERIA-Main.jpg">
-	<img src="../sailing/sailboats/grunvald/yacht2.jpg">
+    <div class="boatInfo">
+    43_02_b . Шхуна
+    <br> длина - 21.90 м, ширина - 5.64 м, осадка - 2.08 м
+    </div>
+    <a href="../sailing/sailboats/HisSmallShip/43_02_b.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/HisSmallShip/43_02_b-200.jpg" height=200></a>
+</div>
+
+<div>
+  <div class="boatInfo">
+    44_04_b . Шхуна
+    <br> длина - 19.00 м, ширина - 5.05 м, осадка - 1.78 м
+  </div>
+  <a href="../sailing/sailboats/HisSmallShip/44_04_b.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/HisSmallShip/44_04_b-200.jpg" height=200></a>
+</div>
+
+<div>
+    <div class="boatInfo">
+44_03_b
+<br> длина - 16.03 м, ширина - 5.22 м, осадка - 1.93 м
+</div>
+<a href="../sailing/sailboats/HisSmallShip/44_03_b.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/HisSmallShip/44_03_b-200.jpg" height=200></a>
+</div>
+
+<div>
+    <div class="boatInfo">
+    43_01_b
+    <br>длина - 23.01 м, ширина - 6.83 м, осадка - 2.52 м
+    </div>
+    <a href="../sailing/sailboats/HisSmallShip/43_01_b.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/HisSmallShip/43_01_b-200.jpg"></a>
+</div>
+
+<div>
+    <a href="../sailing/sailboats/grunvald/183.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/grunvald/183-200.jpg"></a>
+	<a href="../sailing/sailboats/grunvald/the-house-of-seven-rivers-2.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/grunvald/the-house-of-seven-rivers-2-200.jpg"></a>
+	<a href="../sailing/sailboats/grunvald/3387244810_e5ec909f5b.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/grunvald/3387244810_e5ec909f5b.jpg" height="200"></a>
+	<a href="../sailing/sailboats/grunvald/Sail_Yacht_ELEFTHERIA-Main.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/grunvald/Sail_Yacht_ELEFTHERIA-Main-200.jpg"></a>
+	<a href="../sailing/sailboats/grunvald/yacht2.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/grunvald/yacht2.jpg" height="200"></a>
+    <a href="../sailing/sailboats/grunvald/poshiv_085.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/grunvald/poshiv_085-200.jpg"></a>
+    <a href="../sailing/sailboats/grunvald/s1200.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/grunvald/s1200-200.jpg"></a>
+    <a href="../sailing/sailboats/grunvald/shkhuna243.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/grunvald/shkhuna243-200.jpg"></a>
 </div>
 
 <div>
