add content feb

--- a/Skateboard/index.html
+++ b/Skateboard/index.html
@@ -23,7 +23,7 @@
 
     <div><a>skateboarding</a></div>
 
-    <div class="headDivTog"><a href="../Skateboard/" title="skateboarding"><img src="../icons/skateboarding.png" alt="guitar"></a></div>
+    <div class="headDivTog"><a href="../Skateboard/" title="skateboarding"><img src="../icons/skateboarding.png" alt="skateboarding"></a></div>
 
     <div id="headerBar_toggle">
         <span></span>
