--- a/programming/ai.html
+++ b/programming/ai.html
@@ -21,3 +21,41 @@
   <a href="https://habr.com/ru/post/312450/">Нейронные сети для начинающих</a><br>
   <a href="https://www.asozykin.ru/courses/nnpython">Программирование нейросетей на Python</a><br>
 </div>
+
+<div><h3>Компьютерное зрение</h3>
+  <a href="https://opencv.org/">OpenCV</a> , pip install opencv-python
+
+  <details><summary>webcam_eyes_detect.py</summary>
+    <pre><code class="python">
+import cv2
+
+face_cascade_db = cv2.CascadeClassifier(cv2.data.haarcascades + "haarcascade_frontalface_default.xml")
+eye_cascade = cv2.CascadeClassifier(cv2.data.haarcascades + "haarcascade_eye.xml")
+
+cap = cv2.VideoCapture(0)
+// capture = cv2.VideoCapture('videoplayback.mp4')
+// img = cv2.imread('harry.jpg')
+
+while True:
+  success, img = cap.read()
+  img_gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)
+
+  faces = face_cascade_db.detectMultiScale(img, 1.1, 19)
+
+  for (x, y, w, h) in faces:
+    cv2.rectangle(img, (x, y), (x + w, y + h), (0, 255, 0), 1)
+    img_gray_face = img_gray[y:y+h,x:x+w]
+    eyes = eye_cascade.detectMultiScale(img_gray_face, 1.1, 19)
+    for (ex, ey, ew, eh) in eyes:
+      cv2.rectangle(img, (x+ex, y+ey), (x+ex + ew, y+ey + eh), (0, 255, 0), 1)
+
+  cv2.imshow('rez', img)
+
+  if cv2.waitKey(1) & 0xFF == ord('q'):
+    break
+
+cap.release()
+cv2.destroyAllWindows()
+    </code></pre>
+  </details>
+</div>
