add content jan22

--- a/13century/index.html
+++ b/13century/index.html
@@ -46,38 +46,35 @@
   </div>
 </header>
 
-<main class="import_Data flex">
+<main class="flex">
 
 <div>
-  <strong><img src="http://tgorod.ru/favicon.ico" width="16" height="16"></strong>&nbsp;<a href="http://tgorod.ru/index.php?topgroupid=2" target="_blank">Тоже Город</a><br>
-<strong><img src="http://asgard.tgorod.ru/image/common/ptic-s.jpg" width="16" height="16"></strong>&nbsp;<a href="http://asgard.tgorod.ru/" target="_blank">Ассоц-я "Гардарика"</a><br>
-<strong><img src="http://www.13c.ru/logo3.jpg" width="16" height="16"></strong>&nbsp;<a href="http://www.13c.ru/" target="_blank">Saeculi XIII</a><br>
-<strong><img src="http://forum.manor.ru/styles/subsilver2/imageset/site_logo.gif" height="16"></strong>&nbsp;<a href="http://forum.manor.ru/" target="_blank">Forum.Manor.ru</a><br>
-<strong><img src="http://forum.historicus.info/favicon.ico" width="16" height="16"></strong>&nbsp;<a href="http://forum.historicus.info/" target="_blank">Гомельск.Ист.Форум</a><br>
+  <img src="http://tgorod.ru/favicon.ico" height="16"> <a href="http://tgorod.ru/index.php?topgroupid=2">Тоже Город</a><br>
+<img src="http://asgard.tgorod.ru/image/common/ptic-s.jpg" height="16"> <a href="http://asgard.tgorod.ru/">Ассоц-я "Гардарика"</a><br>
+<img src="http://www.13c.ru/logo3.jpg" height="16"> <a href="http://www.13c.ru/">Saeculi XIII</a><br>
+<img src="http://forum.manor.ru/styles/subsilver2/imageset/site_logo.gif" height="16"> <a href="http://forum.manor.ru/">Forum.Manor.ru</a><br>
+<img src="http://forum.historicus.info/favicon.ico" height="16"> <a href="http://forum.historicus.info/">Гомельск.Ист.Форум</a><br>
 
-<strong><img src="http://gesellschaft-lichtenawers.eu/tsc/templates/pergamen_a_tien/favicon.ico" width="16" height="16"></strong>&nbsp;<a href="http://gesellschaft-lichtenawers.eu/tsc/sk/materialy/transkripcie/79-codex-wallerstein-codi642.html" target="_blank">Antonius Rast</a><br>
-<strong><img src="http://picasaweb.google.com/favicon.ico" width="16" height="16"></strong>&nbsp;<a href="http://picasaweb.google.com/smokedim/" target="_blank">Dmitry Nelson</a><br>
-<strong><img src="http://www.bridgemanart.com/images/logos/7.gif" width="16" height="16"></strong>&nbsp;<a href="http://images.bridgeman.co.uk/cgi-bin/bridgemanImage.cgi/2000.CND.1576910.7055475/193572.jpg" target="_blank">BridgemanArt.com</a><br>
-<strong><img src="http://ss4u.forum2x2.ru/favicon.ico" width="16" height="16"></strong>&nbsp;<a href="http://ss4u.forum2x2.ru/forum-f11/tema-t37-45.htm" target="_blank">Шлема 1380-1425 Орда</a><br>
-<strong><img src="favicon.ico" width="16" height="16"></strong>&nbsp;<a href="http://holger.sitecity.ru/index.phtml" target="_blank">Замок Хольгера</a><br>
-<strong><img src="http://www.tforum.info/forum/favicon.ico" width="16" height="16"></strong>&nbsp;<a href="http://www.tforum.info/forum/" target="_blank">Тоже Форум</a><br>
-<strong><img src="http://thun.io.ua/favicon.ico" width="16" height="16"></strong>&nbsp;<a href="http://thun.io.ua/album" target="_blank">Thun Альбом</a><br>
+<img src="http://gesellschaft-lichtenawers.eu/tsc/templates/pergamen_a_tien/favicon.ico" height="16"> <a href="http://gesellschaft-lichtenawers.eu/tsc/sk/materialy/transkripcie/79-codex-wallerstein-codi642.html">Antonius Rast</a><br>
+<img src="http://picasaweb.google.com/favicon.ico" height="16"> <a href="http://picasaweb.google.com/smokedim/">Dmitry Nelson</a><br>
+<img src="http://www.bridgemanart.com/images/logos/7.gif" height="16"> <a href="http://images.bridgeman.co.uk/cgi-bin/bridgemanImage.cgi/2000.CND.1576910.7055475/193572.jpg">BridgemanArt.com</a><br>
+<img src="http://ss4u.forum2x2.ru/favicon.ico" height="16"> <a href="http://ss4u.forum2x2.ru/forum-f11/tema-t37-45.htm">Шлема 1380-1425 Орда</a><br>
+<img src="favicon.ico" height="16"> <a href="http://holger.sitecity.ru/index.phtml">Замок Хольгера</a><br>
+<img src="http://www.tforum.info/forum/favicon.ico" height="16"> <a href="http://www.tforum.info/forum/">Тоже Форум</a><br>
+<img src="http://thun.io.ua/favicon.ico" height="16"> <a href="http://thun.io.ua/album">Thun Альбом</a><br>
 
-<strong><img src="http://www.middleages.hu/pic/cimer.ico" width="16" height="16"></strong>&nbsp;<a href="http://www.middleages.hu/english/martialarts/treatise_database.php" target="_blank">Фехтовальные трактаты</a><br>
+<img src="http://www.middleages.hu/pic/cimer.ico" height="16"> <a href="http://www.middleages.hu/english/martialarts/treatise_database.php">Фехтовальные трактаты</a><br>
 </div>
 
 <div>
-  <strong><img src="http://www.mirdrevnostei.ru/favicon.ico" width="16" height="16"></strong>&nbsp;<a href="http://www.mirdrevnostei.ru/" target="_blank">Мир Древностей</a><br>
-<strong><img src="http://www.gladiator-tula.ru/favicon.ico" width="16" height="16"></strong>&nbsp;<a href="http://www.gladiator-tula.ru/" target="_blank">Ателье"Гладиатор"</a><br>
+<img src="http://www.gladiator-tula.ru/templates/torix01/favicon.ico" height="16"> <a href="http://www.gladiator-tula.ru/">Ателье"Гладиатор"</a><br>
+<img src="http://forum.manor.ru/download/file.php?avatar=9415_1225209316.jpg" height="16"> <a href="http://www.donjon.ru/">"Донжон"</a><br>
+<img src="http://diak.ru/favicon.ico" height="16"> <a href="http://diak.ru/">"У Дьяка"</a><br>
+<img src="http://berkanar.com/favicon.ico" height="16"> <a href="http://berkanar.com/">"Berkanar"</a><br>
+<img src="http://www.dospex.com/favicon.ico" height="16"> <a href="http://www.dospex.com/">"Артель Крым"</a><br>
+<img src="http://kharkov-plattners.narod.ru/favicon.ico" height="16"> <a href="http://kharkov-plattners.narod.ru/">Гильдия Мастеров Харькова</a><br>
 
-<strong><img src="http://victorium.ru/favicon.ico" width="16" height="16"></strong>&nbsp;<a href="http://victorium.ru/" target="_blank">«Викториум»</a><br>
-<strong><img src="http://forum.manor.ru/download/file.php?avatar=9415_1225209316.jpg" width="16" height="16"></strong>&nbsp;<a href="http://www.donjon.ru/" target="_blank">"Донжон"</a><br>
-<strong><img src="http://diak.ru/favicon.ico" width="16" height="16"></strong>&nbsp;<a href="http://diak.ru/" target="_blank">"У Дьяка"</a><br>
-<strong><img src="http://berkanar.com/favicon.ico" width="16" height="16"></strong>&nbsp;<a href="http://berkanar.com/" target="_blank">"Berkanar"</a><br>
-<strong><img src="http://www.dospex.com/favicon.ico" width="16" height="16"></strong>&nbsp;<a href="http://www.dospex.com/" target="_blank">"Артель Крым"</a><br>
-<strong><img src="http://kharkov-plattners.narod.ru/favicon.ico" width="16" height="16"></strong>&nbsp;<a href="http://kharkov-plattners.narod.ru/" target="_blank">Гильдия Мастеров Харькова</a><br>
-
-<strong><img src="http://blacksmith-shop.com.ua/sites/default/files/garland_favicon.ico" width="16" height="16"></strong>&nbsp;<a href="http://blacksmith-shop.com.ua/" target="_blank">Кузня у Гришки</a><br>
+<img src="http://blacksmith-shop.com.ua/sites/default/files/garland_favicon.ico" height="16"> <a href="http://blacksmith-shop.com.ua/">Кузня у Гришки</a><br>
 </div>
 
 </main>
