--- a/programming/webpack.html
+++ b/programming/webpack.html
@@ -49,6 +49,8 @@ npm i -S jquery
   npm install cache-loader style-loader css-loader sass-loader node-sass --save-dev
 
 npm run eject
+
+npm update --save
 </code>
 webpack.config.js
 <code>
