--- a/sailing/sailboats/grunvald.html
+++ b/sailing/sailboats/grunvald.html
@@ -76,6 +76,17 @@
 </div>
 
 <div>
+    <div class="boatInfo">
+    <b>Марсельная Шхуна «Леди Л». Проект «Grumant-69»</b>
+    <br>длина - 23.01 м, ширина - 5.87 м, осадка - 2.74 м,
+    <br>Масса 84т, Паруса 777,3m2
+    <br><a href="https://foundation-of-historic-boats.ru/classes/klassicheskie-yahty/9-marselnaya-shhuna-ledi-li-proekt-grumant-69/">foundation-of-historic-boats.ru</a>
+    <br><a href="https://www.verf-poltava.ru/marselnaya-shkhuna-ledi-l/">verf-poltava.ru</a>
+    </div>
+    <a href="../sailing/sailboats/grunvald/shkhuna243.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/grunvald/shkhuna243-200.jpg"></a>
+</div>
+
+<div>
     <a href="../sailing/sailboats/grunvald/183.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/grunvald/183-200.jpg"></a>
 	<a href="../sailing/sailboats/grunvald/the-house-of-seven-rivers-2.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/grunvald/the-house-of-seven-rivers-2-200.jpg"></a>
 	<a href="../sailing/sailboats/grunvald/3387244810_e5ec909f5b.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/grunvald/3387244810_e5ec909f5b.jpg" height="200"></a>
@@ -83,7 +94,6 @@
 	<a href="../sailing/sailboats/grunvald/yacht2.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/grunvald/yacht2.jpg" height="200"></a>
     <a href="../sailing/sailboats/grunvald/poshiv_085.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/grunvald/poshiv_085-200.jpg"></a>
     <a href="../sailing/sailboats/grunvald/s1200.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/grunvald/s1200-200.jpg"></a>
-    <a href="../sailing/sailboats/grunvald/shkhuna243.jpg" data-lightbox="1" data-title=""><img src="../sailing/sailboats/grunvald/shkhuna243-200.jpg"></a>
 </div>
 
 <div>
