--- a/linguistics/index.html
+++ b/linguistics/index.html
@@ -7,11 +7,11 @@
     <title>Языкознание</title>
     <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
     <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="manifest" href="../manifest.webmanifest">
+    <!-- <link rel="manifest" href="../manifest.webmanifest"> -->
     <script src="../JS/main.js" type="module"></script>
 
-    <!--   <link rel="stylesheet" href="../CSS/lb_style.css">
-       <script src="../JS/lazysizes.min.js" async=""></script> -->
+      <link rel="stylesheet" href="../CSS/lb_style.css">
+       <!-- <script src="../JS/lazysizes.min.js" async=""></script> -->
 </head>
 
 <body>
