--- a/programming/programming.html
+++ b/programming/programming.html
@@ -38,48 +38,9 @@
 </div>
 
 <div class="img32">
-	<h3>MOBILE</h3>
-	<br>
-<!-- 	<a href=""><img src="../icons/android.svg" alt="Android"></a>
-	<a href=""><img src="../icons/ios.svg" alt="iOS"></a>
-	<a href=""><img src="../icons/flutter.png" alt="Flutter"></a> -->
-	<a href="https://api.flutter.dev/"><img src="../icons/flutter.png" alt="flutter"></a>
-	<a href="https://dart.dev/"><img src="https://dart.dev/assets/shared/dart/icon/64.png" alt="Dart"></a>
-	<br><br>
-	<hr><br>
-	<a href="https://youtu.be/tY47kjj2kWM">Алиса Цветкова | Flutter: пишем приложение за 2 часа (Workshop.2020)</a><br>
-	<a href="https://www.youtube.com/c/LearnProgrammingTogether/search?query=flutter">Learn Programming Together</a><br>
-	<a href="https://www.youtube.com/playlist?list=PLyaYkfwvXhRKjYAIO4_J_IcHtAXUR_1ci">Курс Flutter для начинающих. 2020</a><br>
-	<a href="https://habr.com/ru/post/430918/">Про Flutter, кратко: Основы / Хабр</a><br>
-	<a href="https://docs.google.com/presentation/d/1qUycUmwT1bk0dFY-kqvGk-tuGtQMj2g_HchUrWXrk3w/mobilepresent?slide=id.p">Как я изучал Flutter @gorniv</a><br>
-	<a href="https://youtu.be/qYzydKidbDQ">Flutter Day Russia</a><br>
-	<a href="https://youtu.be/KHH9cr3dm98">Создаём APK файл в Android Studio</a><br>
-	<a href="https://youtu.be/vgPup1IJ5NQ">Как опубликовать Flutter приложение в Google Play</a><br>
-	StatelessWidget не изменяются в рантайме <br>
-	<a href="https://www.youtube.com/playlist?list=PLC2cXbfcJ9qsLTvKJ8ENTu8X0l6xtGbk2">Программирование на Dart. 2017-19</a><br>
-	<pre><code>
-color: const Color(0xFF509f93),
-color: Colors.blueGrey,
-color: Colors.red[700],
-
-pubspec.yaml
-
-dependencies:
-  flutter_svg: ^0.18.0
-
-***
-
-flutter packages pub run flutter_launcher_icons:main
-	</code></pre><br>
-	fluttericon.com <br>
-	<a href="https://romannurik.github.io/AndroidAssetStudio/index.html">AndroidAssetStudio</a><br>
-	<a href="https://medium.com/fabcoding/get-current-user-location-in-flutter-57e202bad6db">Get Current User Location in Flutter</a><br>
-
-</div>
-
-<div class="img32">
 	<h3>!</h3>
 	<br>
+	<a href="#flutter"><img src="../icons/flutter.png" alt="Flutter"></a>
 	<a href="#c"><span>C</span></a>
 	<a href="#php"><img src="https://www.php.net/images/logos/php-med-trans.png" alt="php" title="php"></a>
 	<a href="#python"><img src="../icons/python.svg" alt="python"></a>
@@ -168,6 +129,8 @@ flutter packages pub run flutter_launcher_icons:main
 		<a href="https://www.haskell.org/"><img src="https://www.haskell.org/img/favicon.ico" alt="Haskell"> Haskell</a><br>
 		Курт Уилл - Программируй на Haskell <br>
 		Окасаки К. - Чисто функциональные структуры данных <br>
+		<a href="https://youtu.be/MtnzWTpJqoE">Функциональное программирование. Часть 1</a><br>
+		<a href="https://youtu.be/2QAUAZ5qgJM">Функциональное программирование в мире JavaScript</a><br>
 </div>
 
 <div><h2>Реактивное программирование</h2>
