--- a/programming/vue.html
+++ b/programming/vue.html
@@ -7,6 +7,7 @@
     <a href="https://github.com/vuejs/vue"><img src="https://github.githubassets.com/favicon.ico" alt="github"></a>
     <a href="https://nuxtjs.org/"><img src="https://nuxtjs.org/logos/nuxt.svg" alt="nuxt">nuxt</a>
     <a href="https://vuetifyjs.com/en/"><img src="https://vuetifyjs.com/favicon.ico" alt="vuetify"></a>
+    <a href="https://quasar.dev/"><img src="https://cdn.quasar.dev/app-icons/favicon-16x16.png" alt="quasar"></a>
     <br>
     <a href="https://ru.vuejs.org/v2/guide/">vuejs.org/v2/guide</a><br>
     <a href="https://itvdn.com/ru/video/vuejs">Vue.js Starter (itvdn. 2017)</a><br>
