--- a/programming/database.html
+++ b/programming/database.html
@@ -185,6 +185,7 @@ firebase init
 . hosting //для деплоя на firebase.hosting
 npm run build
 firebase deploy
+if error {firebase logout; firebase login}
 	</code></pre>
 </div>
 
