--- a/programming/net.html
+++ b/programming/net.html
@@ -17,5 +17,8 @@
 </div>
 
 <div>
-	localhost === 127.0.0.1
+	localhost === 127.0.0.1 <br>
+	adguardteam/DNSProxy , DNS over HTTPS <br>
+	<a href="https://yewtu.be/watch?v=42yg7nBrlGs">Большой заговор DNS</a><br>
+	
 </div>
