--- a/programming/programming.html
+++ b/programming/programming.html
@@ -226,6 +226,13 @@
 
 <div class="img16">
 		<h2>Hosting / Domain /<br> Deploy / DevOps</h2>
+		VPS KVM <br>
+		<a href="https://do.co/2Wbi3Ip">DigitalOcean</a> , <a href="https://do.co/2IOFhvY">Tutorials</a><br>
+		<a href="http://www.reg.ru">reg.ru</a><br>
+<a href="https://aws.amazon.com/ru">Amazon Web Services</a> <a href="https://go.aws/3aZNDN8">Уровень бесплатного пользования AWS</a><br>
+<a href="http://bit.ly/2IKKll7">Яндекс.Облако</a><br>
+<a href="http://bit.ly/2wUQHeW">Alibaba Cloud</a><br>
+<a href="http://bit.ly/3d330WX">Бесплатная проверка доступности сайта из различных частей мира</a><br>
 		<a href="https://itvdn.com/ru/video/jenkins">jenkins</a><br>
 		<a href="https://youtu.be/QXI1fWnfS7U">Практикум DevOps by Rebrain: Ansible</a><br>
 		<a href="https://github.com/yaoweibin/nginx_upstream_check_module">nginx_upstream_check_module</a><br>
