--- a/sailing/sailboats/Nau.html
+++ b/sailing/sailboats/Nau.html
@@ -15,11 +15,11 @@
  <td>
 Draken Harald Harfagre
 
-<img src="http://www.drakenhh.com/favicon.ico" height="16"> <a href="http://www.drakenhh.com" target="_blank">drakenhh.com</a>
+<img src="http://www.drakenhh.com/favicon.ico" height="16"> <a href="http://www.drakenhh.com">drakenhh.com</a>
 </td>
  <td>
-<iframe height="200" src="https://www.youtube.com/embed/XORSpUUy0lQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> 
-<iframe height="200" src="https://www.youtube.com/embed/r-DKZTMPqoE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  <a href="https://yewtu.be/watch?v=XORSpUUy0lQ">Storm in The Labrador Sea</a><br>
+  <a href="https://yewtu.be/watch?v=r-DKZTMPqoE">Draken Harald Hårfagre - The construction of a Viking Dragon Ship</a>
 </td>
 </tr>
 <tr>
