--- a/13century/index.html
+++ b/13century/index.html
@@ -10,7 +10,7 @@
   <script src="../JS/main.js" type="module"></script>
 
   <link rel="stylesheet" href="../CSS/lb_style.css">
-  <!-- <script src="../JS/lazysizes.min.js" async=""></script> -->
+  <script src="../JS/lazysizes.min.js" async=""></script>
 </head>
 
 <body>
@@ -46,7 +46,7 @@
   </div>
 </header>
 
-<main class="flex">
+<main class="flex import_Data lazy">
 
 <div>
   <img src="http://tgorod.ru/favicon.ico" height="16"> <a href="http://tgorod.ru/index.php?topgroupid=2">Тоже Город</a><br>
