--- a/flamenco/alegrias.html
+++ b/flamenco/alegrias.html
@@ -16,7 +16,7 @@ Enrique de Melchor. alegrias en mi <a href="http://leonardasf1.narod.ru/flamenco
 
 <div>
  <font color="#ff9900"><b> Baile</b></font> <br><br>
-<br><a href="https://youtu.be/PMaCrMNP6ic">Alegrías - Rafael Campallo .2008</a>
-<br><a href="https://youtu.be/WQCS-JXGFPs">Concha Jareno Alegrias 1 Premio Matilde Coral .2007</a>
+<br><a href="https://yewtu.be/PMaCrMNP6ic">Alegrías - Rafael Campallo .2008</a>
+<br><a href="https://yewtu.be/WQCS-JXGFPs">Concha Jareno Alegrias 1 Premio Matilde Coral .2007</a>
 
 </div>
