--- a/flamenco/bulerias.html
+++ b/flamenco/bulerias.html
@@ -51,7 +51,7 @@
 Enrique de Melchor. Bulerias <a href="https://yadi.sk/i/Yhji9g893PePJx">video</a><br>
 Enrique de Melchor. Bulerias en mi bemol <a href="../flamenco/bulerias/EMbulerias2.mpg" target="_blank">(video)</a><br>
 Enrique de Melchor. Bulerias por arriba <a href="../flamenco/bulerias/EMbulerias3.mpg" target="_blank">(video)</a><br>
-<a href="https://youtu.be/heo4NsEPVG0">Niño Miguel - bulerias</a><br>
-<a href="https://youtu.be/p5ypbEOZLUU">Moraito Chico por Bulerías.</a><br>
+<a href="https://yewtu.be/heo4NsEPVG0">Niño Miguel - bulerias</a><br>
+<a href="https://yewtu.be/p5ypbEOZLUU">Moraito Chico por Bulerías.</a><br>
 <a href="https://vk.com/video_ext.php?oid=1343958&id=170122432&hash=05129c73ca001137&hd=2">Гриша Горячев "Bulerias"</a>
 </div>
