--- a/flamenco/index.html
+++ b/flamenco/index.html
@@ -81,9 +81,9 @@
 
 
 <h2>tecnica zapateado</h2>  
- <a href="https://youtu.be/ajJyNFQFPQc">Doble Golpe</a><br>
+ <a href="https://yewtu.be/ajJyNFQFPQc">Doble Golpe</a><br>
 <h3>Técnica de la baile</h3>
-<a href="https://youtu.be/rShnp9PYgSs">Clase magistral de Domingo Ortega</a><br>
+<a href="https://yewtu.be/rShnp9PYgSs">Clase magistral de Domingo Ortega</a><br>
 </div>
 
 <div>
@@ -96,11 +96,11 @@
 
 <div>
 	
-<a href="https://youtu.be/PMaCrMNP6ic">Alegrías - Rafael Campallo</a><br>
-<a href="https://youtu.be/vk7J2N3zRIY">Tangos - Morón, Ortega y Campallo</a><br>
-<a href="https://youtu.be/D2Jav4phlYg">Domingo Ortega Casa Patas 2012</a><br>
-<a href="https://youtu.be/5_Cn9i4iq20">Camaroneando. Farruco. 2011</a><br>
-<a href="https://youtu.be/WQCS-JXGFPs">Concha Jareno Alegrias 1 Premio Matilde Coral</a><br>
+<a href="https://yewtu.be/PMaCrMNP6ic">Alegrías - Rafael Campallo</a><br>
+<a href="https://yewtu.be/vk7J2N3zRIY">Tangos - Morón, Ortega y Campallo</a><br>
+<a href="https://yewtu.be/D2Jav4phlYg">Domingo Ortega Casa Patas 2012</a><br>
+<a href="https://yewtu.be/5_Cn9i4iq20">Camaroneando. Farruco. 2011</a><br>
+<a href="https://yewtu.be/WQCS-JXGFPs">Concha Jareno Alegrias 1 Premio Matilde Coral</a><br>
 </div>
 
 
