--- a/flamenco/seguiriya.html
+++ b/flamenco/seguiriya.html
@@ -26,24 +26,24 @@ Enrique de Melchor. <a href="https://yadi.sk/i/qW3LQSOk3PdnHT">(video)</a><br><b
 <a href='https://music.yandex.ru/users/Leonardasf1/playlists/1001'>Seguiriya : Ramon Montoya</a>
 <hr>
 Diego del Gastor<br>
-<a href="https://youtu.be/XwJEMvSNMgc">Diego del Gastor - Siguiriyas</a><br>
+<a href="https://yewtu.be/XwJEMvSNMgc">Diego del Gastor - Siguiriyas</a><br>
 <hr>
 Moraito Chico <br>
-<a href="https://youtu.be/AEbhp0VviRA">Moraito enseñando (teaching) por Siguiriya</a><br>
+<a href="https://yewtu.be/AEbhp0VviRA">Moraito enseñando (teaching) por Siguiriya</a><br>
 <hr>
 Melchor de Marchena<br>
-<a href="https://youtu.be/eRodOEXAFQA">CURRO MAIRENA-MELCHOR DE MARCHENA-SIGUIRIYAS</a><br>
+<a href="https://yewtu.be/eRodOEXAFQA">CURRO MAIRENA-MELCHOR DE MARCHENA-SIGUIRIYAS</a><br>
 <hr>
 Parrilla de Jerez<br>
-<a href="https://youtu.be/RBcL2i4RiyQ">Terremoto de Jerez por Seguiriyas</a><br>
+<a href="https://yewtu.be/RBcL2i4RiyQ">Terremoto de Jerez por Seguiriyas</a><br>
 <hr>
 Manuel Morao<br>
-<a href="https://youtu.be/4LaBRwaATJc">Manuel Morao por Seguiriyas</a><br>
-<a href="https://youtu.be/HjZbv_4w_5Q">Terremoto y Manuel Morao por Seguiriyas</a><br>
+<a href="https://yewtu.be/4LaBRwaATJc">Manuel Morao por Seguiriyas</a><br>
+<a href="https://yewtu.be/HjZbv_4w_5Q">Terremoto y Manuel Morao por Seguiriyas</a><br>
 <hr>
-<a href="https://youtu.be/zxD4bHarNGk">Manolo Sanlucar por Seguiriyas</a><br>
-<a href="https://youtu.be/cno__X_d_bw">Paco de Lucía - Siguiriyas</a><br>
-<a href="https://youtu.be/0EjqbdQqmwQ">Camaron - Seguiriyas</a><br>
-<a href="https://youtu.be/n7l2STtFhEA">Gerardo Núñez - Siguiriyas</a><br>
-<a href="https://youtu.be/WZqohYTbaSA">DIEGO DEL MORAO: "Pago de la Serrana"</a><br>
+<a href="https://yewtu.be/zxD4bHarNGk">Manolo Sanlucar por Seguiriyas</a><br>
+<a href="https://yewtu.be/cno__X_d_bw">Paco de Lucía - Siguiriyas</a><br>
+<a href="https://yewtu.be/0EjqbdQqmwQ">Camaron - Seguiriyas</a><br>
+<a href="https://yewtu.be/n7l2STtFhEA">Gerardo Núñez - Siguiriyas</a><br>
+<a href="https://yewtu.be/WZqohYTbaSA">DIEGO DEL MORAO: "Pago de la Serrana"</a><br>
 </div>
