--- a/flamenco/solea.html
+++ b/flamenco/solea.html
@@ -46,13 +46,13 @@ With Antonio Mairena (1976, "Para que Dios"). This falseta opens the track, paus
 <br><img src="../flamenco/solea/evolenrique004.gif" alt="Enrique de Melchor" height="206" width="699" border="0">
 </div>
 <div>
-<a href="https://youtu.be/PCfSCRcr0Gc">Niño Miguel - Soleá</a><br>
-<a href="https://youtu.be/PwSaJnbHe4I">Diego del Gastor por Soleá</a><br>
-<a href="https://youtu.be/wcAJ73pu2_M">Moraito por Solea</a><br>
-<a href="https://youtu.be/lde393e6GZA">Moraito enseñando (teaching) por Soleá</a><br>
-<a href="https://youtu.be/ZNLAYOl6SRU">Enrique De Melchor - Solea</a><br>
-<a href="https://youtu.be/qGJ9S3Is6lY">Paco Peña - Solea De Córdoba</a><br>
-<a href="https://youtu.be/c8dpwH7FrgM">Paco Peña - Soleares</a><br>
-<a href="https://youtu.be/3uFes1K6zC8">1972 , SABICAS interprète " Mi Solea "</a><br>
-<a href="https://youtu.be/AF-osjXmIt8">Raimundo Amador - Soleá pa los Clásicos</a><br>
+<a href="https://yewtu.be/PCfSCRcr0Gc">Niño Miguel - Soleá</a><br>
+<a href="https://yewtu.be/PwSaJnbHe4I">Diego del Gastor por Soleá</a><br>
+<a href="https://yewtu.be/wcAJ73pu2_M">Moraito por Solea</a><br>
+<a href="https://yewtu.be/lde393e6GZA">Moraito enseñando (teaching) por Soleá</a><br>
+<a href="https://yewtu.be/ZNLAYOl6SRU">Enrique De Melchor - Solea</a><br>
+<a href="https://yewtu.be/qGJ9S3Is6lY">Paco Peña - Solea De Córdoba</a><br>
+<a href="https://yewtu.be/c8dpwH7FrgM">Paco Peña - Soleares</a><br>
+<a href="https://yewtu.be/3uFes1K6zC8">1972 , SABICAS interprète " Mi Solea "</a><br>
+<a href="https://yewtu.be/AF-osjXmIt8">Raimundo Amador - Soleá pa los Clásicos</a><br>
 </div>
