--- a/flamenco/tientos.html
+++ b/flamenco/tientos.html
@@ -1,5 +1,5 @@
 <div id="pageTitle">Tientos</div>
 
 <div>
-	Enrique de Melchor. Tientos <a href="../flamenco/tientos/EMtientos.mpg" target="_blank">(video)</a>
+	Enrique de Melchor. Tientos <a href="../flamenco/tientos/EMtientos.mpg" data-lightbox="EM" data-title="">(video)</a>
 </div>
