--- a/style/index.html
+++ b/style/index.html
@@ -76,7 +76,7 @@
   Suunto 7 .30тр<br>
   Samsung Galaxy Watch 3 <br>
   Samsung Galaxy Watch Active 2 .16тр<br>
-  Huawei Watch GT 2 Pro .20тр <a href="https://youtu.be/QuWjT96r6Pw">youtu</a><br>
+  Huawei Watch GT 2 Pro .20тр <a href="https://yewtu.be/QuWjT96r6Pw">yewtu</a><br>
   Huawei Watch GT2 .12тр <br>
   Xiaomi Amazfit GTR 2 Classic Edition Steel <a href="https://shop.mts.ru/product/chasy-amazfit-gtr-2-classic-edition-steel">.15,5тр</a><br>
 </div>
