--- a/programming/index.html
+++ b/programming/index.html
@@ -8,6 +8,7 @@
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/style.css">
   <link rel="stylesheet" href="../CSS/progr.css">
+  <link rel="stylesheet" href="../CSS/lb_style.css">
   <link rel="manifest" href="../manifest.webmanifest">
   <!-- <script src="../JS/lazysizes.min.js" async=""></script> -->
   <link rel="stylesheet" href="../CSS/highlight.css">
